# cpfrestSw

./: Cargo.toml  s3client
config/: properties.toml
src/: main.rs
src/configs/: settings.rs
src/utility/: mod.rs  utils.rs  work_with_files.rs
