[package]
name = "cpfrestSw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.103"
rustc-serialize = "0.3.24"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
quicli = "0.4.0"
structopt = "0.3.26"
clap = { version = "4.3.17", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
config-file = "0.2.3"
